--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "tailwindcss/tailwind.css";
 
 :root {
   --foreground-rgb: 0, 0, 0;
